--- a/frontend/Dockerfile.windows
+++ b/frontend/Dockerfile.windows
@@ -39,7 +39,7 @@ WORKDIR /app
 
 RUN mkdir "C:\app\.next\cache\images"
 # && chown nextjs:nodejs /app/.next/cache/images
-VOLUME /app/.next/cache/images
+VOLUME "C:\app\.next\cache\images"
 
 ARG POSTHOG_API_KEY
 ENV NEXT_PUBLIC_POSTHOG_API_KEY=$POSTHOG_API_KEY \
