--- a/docker-compose.windows.yml
+++ b/docker-compose.windows.yml
@@ -42,7 +42,7 @@ services:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_USERNAME}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
     volumes:
-      - mongo-data:/data/db
+      - 'mongo-data:C:\data\db'
     networks:
       - infisical
 
