fix: windows dockerfile commands

--- a/docker-compose.windows.yml
+++ b/docker-compose.windows.yml
@@ -4,8 +4,8 @@ services:
   backend:
     container_name: infisical-backend
     restart: unless-stopped
-    depends_on:
-      - mongo
+#    depends_on:
+#      - mongo
     image: lucatk/infisical-backend-windows
     ports:
       - '4000:4000'
@@ -33,18 +33,21 @@ services:
     networks:
       - infisical
 
-  mongo:
-    container_name: infisical-mongo
-    image: mongo:windowsservercore-1809
-    restart: always
-    env_file: .env
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=${MONGO_USERNAME}
-      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
-    volumes:
-      - 'mongo-data:C:\data\db'
-    networks:
-      - infisical
+#  didn't work for me (volume bind mount bug)
+#  use: docker run --env-file .env --restart=always --network infisical_infisical --name infisical-mongo -v infisical-mongo-data:c:\data\db mongo:nanoserver-1809
+#
+#  mongo:
+#    container_name: infisical-mongo
+#    image: mongo:windowsservercore-1809
+#    restart: always
+#    env_file: .env
+#    environment:
+#      - MONGO_INITDB_ROOT_USERNAME=${MONGO_USERNAME}
+#      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
+#    volumes:
+#      - 'mongo-data:c:\data\db'
+#    networks:
+#      - infisical
 
 volumes:
   mongo-data:
